site/assets/typography.styl
@import '~~@@/lib/@anovi/invisible/index.styl'
$show-grid = true

make-grid()
make-flex()
make-sizing()
make-spacing()


:root
  --font-size: 15px !important
  --line-height: 20px !important
  +screen('sm')
    --font-size: 20px !important
    --line-height: 24px !important

// CSS
h1 {
  font-size: 2.75rem
  line-height: calc(var(--grid-unit) * 4)
  margin-top: calc(var(--grid-unit) * 4)
  margin-bottom: calc(var(--grid-unit) * 4)
}

// Stylus
h2
  font-size: 2.1rem
  line-height: gu(3)
  margin-top: gu(3)
  margin-bottom: gu(3)

h3
  font-size: 1.6rem
  line-height: gu(3)
  margin-top: gu(2)
  margin-bottom: gu(2)

h4
  font-size: 1.2rem
  line-height: gu(2)
  margin-top: gu(2)
  margin-bottom: gu(2)

h5
  font-size: 1rem
  line-height: gu(2)
  margin-top: gu(2)
  margin-bottom: gu(2)

p, ul, ol, pre, table, blockquote
  margin-top: gu(2)
  margin-bottom: gu(2)

ul ul, ol ol, ul ol, ol ul
  margin-top: 0
  margin-bottom: 0

pre
  max-width: 100%
  overflow: auto
  background: rgba(0,0,0,0.05)
  border-radius: 4px
  padding: gu(1) gu(1) gu(1) gu(1)

code
  color: #e83e8c

